--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "ts-node-dev src/server.ts",
+    "dev": "ts-node-dev --transpile-only --ignore-watch node_modules src/server.ts",
+    "typeorm": "ts-node-dev ./node_modules/typeorm/cli.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -13,7 +14,9 @@
   "dependencies": {
     "@types/express": "^4.17.8",
     "express": "^4.17.1",
+    "sqlite3": "^5.0.0",
     "ts-node-dev": "^1.0.0-pre.63",
+    "typeorm": "^0.2.28",
     "typescript": "^4.0.3"
   }
 }
